fix max-width too large issue in nav bar

--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -223,7 +223,7 @@
 }
 
 /* Responsive Design */
-@media (max-width: 1500px) {
+@media (max-width: 1200px) {
   .hamburger {
     display: block; /* Show the hamburger menu on smaller screens */
   }
